--- a/content/themes/development/assets/css/home.css
+++ b/content/themes/development/assets/css/home.css
@@ -1,32 +1,20 @@
+header {
+  background-color: #689F38; }
+  header img {
+    height: auto;
+    width: auto;
+    max-height: 50px; }
+  header .header-text {
+    display: inline-block;
+    position: relative;
+    top: 3px; }
 
-.header-title-content img{
-	height: auto; 
-    width: auto; 
-    max-height: 50px;
-}
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+  .header-title-content {
+    font-size: 85%; }
+    .header-title-content img {
+      display: none; }
 
-.header-title-content .header-text{
-	display: inline-block;
-}
-
-@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
-
-	.header-title-content img{
-		display: none;
-	}
-
-	.header-title-content{
-		font-size: 85%;
-	}
-
-
- 
-/* Mobile Styles */
- 
-}
-
-@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
- 
-/* Tablet Styles */
- 
-}
+  /* Mobile Styles */ }
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+  /* Tablet Styles */ }
