--- a/content/themes/development/assets/css/libs/style.css
+++ b/content/themes/development/assets/css/libs/style.css
@@ -354,7 +354,7 @@ header {
     padding: 35px;
     position: relative;
     overflow: hidden;
-    background-color: #CCCCCC;
+/*    background-color: #CCCCCC;*/
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
