--- a/content/themes/dev/assets/css/libs/_style.css
+++ b/content/themes/dev/assets/css/libs/_style.css
@@ -351,7 +351,7 @@ pre {
     position: relative;
 }
 header {
-    padding: 35px;
+/*    padding: 35px;*/
     position: relative;
     overflow: hidden;
 /*    background-color: #CCCCCC;*/
@@ -1696,8 +1696,8 @@ header.slideshow .logo.hide, header.slideshow h1.hide {
 }
 .navigation.sidebar {
     position: fixed;
-    top: 165px;
-    left: 35px;
+/*    top: 165px;
+    left: 35px;*/
     width: 200px;
     height: auto;
     border: none;
@@ -2112,7 +2112,7 @@ header.slideshow .logo.hide, header.slideshow h1.hide {
 }
 .posts {
     padding: 0 35px;
-    margin: 80px auto 0;
+/*    margin: 80px auto 0;*/
     max-width: 970px;
     filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
     opacity: 0;
