Post loop functionality complete

--- a/content/themes/dev/assets/css/home.css
+++ b/content/themes/dev/assets/css/home.css
@@ -21,10 +21,30 @@
       position: relative;
       top: 3px; }
 
+.post-loop_partial::before {
+  background-image: url("../../../content/images/theme/wallpaper.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+  content: '';
+  will-change: transform;
+  z-index: -1;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  position: fixed; }
+
 .post-loop_partial {
+  padding-top: 300px;
   margin: 0 0 0 240px; }
   .post-loop_partial article {
-    margin: 20px auto 20px auto; }
+    margin: 100px auto 100px auto; }
+    .post-loop_partial article .mdl-card__title {
+      height: 200px;
+      background: url("../../../content/images/theme/welcome_card.jpg"); }
+      .post-loop_partial article .mdl-card__title .mdl-card__title-text a {
+        color: white;
+        text-decoration: none; }
 
 /* Desktop Styles */
 /* Tablet Styles */
