--- a/content/themes/dev/partials/loop.hbs
+++ b/content/themes/dev/partials/loop.hbs
@@ -3,6 +3,10 @@
     {{pagination}}
 </div>
 
+<div class="large-bk">
+</div>
+
+
 {{! This is the post loop - each post will be output using this markup }}
 {{#foreach posts}}
 
@@ -11,14 +15,12 @@
     <h2 class="mdl-card__title-text"><a href="{{url}}">{{{title}}}</a></h2>
   </div>
   <div class="mdl-card__supporting-text">
-    <p>{{excerpt words="26"}} <a class="read-more" href="{{url}}">&raquo;</a></p>
+    <p>{{excerpt words="100"}} <a class="read-more" href="{{url}}">&raquo;</a></p>
   </div>
   <div class="mdl-card__actions mdl-card--border">
+    <time class="post-date" datetime="{{date format='YYYY-MM-DD'}}">{{date format="DD MMMM YYYY"}}</time>
     <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-        {{#if author.image}}<img class="author-thumb" src="{{author.image}}" alt="{{author.name}}" nopin="nopin" />{{/if}}
-        {{author}}
-        {{tags prefix=" on "}}
-        <time class="post-date" datetime="{{date format='YYYY-MM-DD'}}">{{date format="DD MMMM YYYY"}}</time>
+        Share
     </a>
   </div>
 {{!--   <div class="mdl-card__menu">
