--- a/content/themes/dev/partials/navigation.hbs
+++ b/content/themes/dev/partials/navigation.hbs
@@ -1,21 +1,5 @@
 
-{{!-- {{! The big featured header }}
-<header class="main-header {{#if @blog.cover}}" style="background-image: url({{@blog.cover}}){{else}}no-cover{{/if}}">
-    <nav class="main-nav overlay clearfix">
-        {{#if @blog.logo}}<a class="blog-logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="{{@blog.title}}" /></a>{{/if}}
-        {{#if @blog.navigation}}
-            <a class="menu-button icon-menu" href="#"><span class="word">Menu</span></a>
-        {{/if}}
-    </nav>
-    <div class="vertical">
-        <div class="main-header-content inner">
-            <h1 class="page-title">{{@blog.title}}</h1>
-            <h2 class="page-description">{{@blog.description}}</h2>
-        </div>
-    </div>
-    <a class="scroll-down icon-arrow-left" href="#content" data-offset="-45"><span class="hidden">Scroll Down</span></a>
-</header> 
-
+{{!--
 
 <div class="nav">
     <h3 class="nav-title">Menu</h3>
@@ -33,15 +17,13 @@
 
 --}}
 
-
-<!-- No header, and the drawer stays open on larger screens (fixed drawer). -->
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer
             mdl-layout--overlay-drawer-button">
   <div class="mdl-layout__drawer">
     <div class="fancy-header mdl-layout-title">
       <a href="/">
-        <img alt="{{@blog.title}}" src="../content/images/theme/color-hfon-skull.png" />
-        <div class="header-text">HFON</div>
+        <img alt="{{@blog.title}}" src="../content/images/theme/color-hfon-skull.png" /> {{!-- src should be blog logo --}}
+        <div class="header-text">HFON</div> {{!-- text should be abbrv of blog title --}}
       </a>
     </div>
     <nav class="mdl-navigation">
