--- a/content/themes/dev/partials/splash.hbs
+++ b/content/themes/dev/partials/splash.hbs
@@ -17,7 +17,9 @@
 --}}
 
 <div class="fancy-header">
-    HFON
+    <div class="bg-overlay">
+        HFON
+    </div>
 </div>
 
 {{!-- <div class="fancy-header">
