--- a/content/themes/dev/assets/css/home.css
+++ b/content/themes/dev/assets/css/home.css
@@ -2,45 +2,61 @@
 @font-face {
   font-family: old-english;
   src: url("../fonts/old-english.ttf"); }
-.navigation_partial .mdl-layout__drawer {
-  background-color: #27ae60;
-  position: fixed; }
-.navigation_partial .mdl-navigation {
-  background-color: white; }
-.navigation_partial .fancy-header {
-  border: 5px solid black;
-  height: 75px;
-  width: auto;
-  margin: 20px;
-  background-color: white; }
-  .navigation_partial .fancy-header a {
-    text-decoration: none; }
-    .navigation_partial .fancy-header a img {
-      height: auto;
-      width: auto;
-      max-height: 50px; }
-    .navigation_partial .fancy-header a .header-text {
-      display: inline-block;
-      position: relative;
-      top: 3px; }
+.bg-overlay {
+  width: 100%;
+  height: 100%;
+  z-index: -999;
+  background-color: #27ae60; }
+
+.navigation_partial {
+  display: none; }
+  .navigation_partial .mdl-layout__drawer {
+    position: fixed; }
+  .navigation_partial .mdl-navigation {
+    background-color: white; }
+  .navigation_partial .fancy-header {
+    border: 5px solid black;
+    height: 75px;
+    width: auto;
+    margin: 20px;
+    background-color: white; }
+    .navigation_partial .fancy-header a {
+      text-decoration: none;
+      position: absolute;
+      margin: 3px 0 0 5px; }
+      .navigation_partial .fancy-header a img {
+        height: auto;
+        width: auto;
+        max-height: 50px; }
+      .navigation_partial .fancy-header a .header-text {
+        display: inline-block;
+        position: relative;
+        top: 10px;
+        font-weight: bold;
+        font-size: 40px;
+        color: black; }
 
 .splash-absent {
-  margin: 0 0 0 240px; }
+  margin: 0 0 0 240px;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease; }
 
 .splash_partial .fancy-header {
-  border: 5px solid black;
+  border: 10px solid black;
   height: 200px;
   width: 40%;
-  margin: 100px auto 200px auto;
-  background-image: url("../../../content/images/theme/wallpaper.jpg");
-  background-size: cover;
-  background-attachment: fixed;
-  text-align: center;
-  vertical-align: middle;
-  line-height: 200px;
-  font-size: 100px;
-  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
-  color: black; }
+  margin: 100px auto 200px auto; }
+  .splash_partial .fancy-header .bg-overlay {
+    background-color: white;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 200px;
+    font-size: 12.5vw;
+    font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
+    color: black;
+    font-weight: bold; }
 
 .post-loop_partial article {
   margin: 100px auto 100px auto; }
@@ -55,5 +71,9 @@
 /* Tablet Styles */
 @media only screen and (max-width: 850px) {
   .splash-absent {
-    margin: 0; } }
+    margin: 0;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease; } }
 /* Mobile Styles */
