--- a/content/themes/dev/assets/css/sass/home.scss
+++ b/content/themes/dev/assets/css/sass/home.scss
@@ -5,10 +5,22 @@
     src: url('../fonts/old-english.ttf');
 }
 
+.bg-overlay {
+	width: 100%;
+	height: 100%;
+	z-index: -999;
+	// background-color: rgba(0,0,0,0.5);
+	background-color: #27ae60;
+}
+
 .navigation_partial {
+	display: none;
 
 	.mdl-layout__drawer {
-		background-color: #27ae60;
+		// background-image: url('../../../content/images/theme/wallpaper.jpg');
+	 //    background-size: cover;
+	 //    background-attachment: fixed;
+
 		position: fixed;
 	}
 
@@ -29,6 +41,8 @@
 
 		a {
 			text-decoration: none;
+			position: absolute;
+   			margin: 3px 0 0 5px;
 
 			img {
 				height: auto; 
@@ -39,7 +53,12 @@
 			.header-text{
 				display: inline-block;
 				position: relative;
-				top:3px;
+				top:10px;
+
+				font-weight: bold;
+				font-size: 40px;
+				color: black;
+
 			}
 		}
 	}
@@ -47,32 +66,36 @@
 
 .splash-absent {
 	margin: 0 0 0 240px;
+
+	-webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
 }
 
 .splash_partial {
 	.fancy-header {
-		border: 5px solid black;
+		border: 10px solid black;
 		height: 200px;
 		width: 40%;
 		margin: 100px auto 200px auto;
 
-		background-image: url('../../../content/images/theme/wallpaper.jpg');
-	    background-size: cover;
-	    background-attachment: fixed;
+		// background-image: url('../../../content/images/theme/wallpaper.jpg');
+	 	// background-size: cover;
+	 	// background-attachment: fixed;
 
-		text-align: center;
-		vertical-align: middle;
-		line-height: 200px;   
+		.bg-overlay {
+			background-color: rgb(255,255,255);
 
-		font-size: 100px;
-		font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
-		color: black;
+			text-align: center;
+			vertical-align: middle;
+			line-height: 200px;   
 
-		// img {
-		// 	height: auto; 
-		//     width: auto; 
-		//     max-height:200px;
-		// }
+			font-size: 12.5vw;
+			font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
+			color: black;
+			font-weight: bold;
+		}
 
 		// .header-text{
 		// 	display: inline-block;
@@ -124,6 +147,11 @@
 @media only screen and (max-width : 850px)  {
 	.splash-absent {
 		margin: 0;
+
+		-webkit-transition: all 0.5s ease;
+    	-moz-transition: all 0.5s ease;
+    	-o-transition: all 0.5s ease;
+    	transition: all 0.5s ease;
 	}
 }
  
