--- a/content/themes/dev/assets/css/home.css
+++ b/content/themes/dev/assets/css/home.css
@@ -1,7 +1,4 @@
 /* Global Styles */
-@font-face {
-  font-family: old-english;
-  src: url("../fonts/old-english.ttf"); }
 .bg-overlay {
   width: 100%;
   height: 100%;
@@ -11,9 +8,15 @@
 .navigation_partial {
   display: none; }
   .navigation_partial .mdl-layout__drawer {
-    position: fixed; }
+    position: fixed;
+    border: none;
+    box-shadow: none; }
   .navigation_partial .mdl-navigation {
-    background-color: white; }
+    background-color: white;
+    box-shadow: inset 0 7px 4px -6px rgba(0, 0, 0, 0.4), inset 0 -7px 4px -6px rgba(0, 0, 0, 0.4);
+    font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif; }
+    .navigation_partial .mdl-navigation .mdl-navigation__link {
+      font-size: 14px; }
   .navigation_partial .fancy-header {
     border: 5px solid black;
     height: 75px;
@@ -43,29 +46,40 @@
   -o-transition: all 0.5s ease;
   transition: all 0.5s ease; }
 
-.splash_partial .fancy-header {
-  border: 10px solid black;
-  height: 200px;
-  width: 40%;
-  margin: 100px auto 200px auto; }
-  .splash_partial .fancy-header .bg-overlay {
-    background-color: white;
-    text-align: center;
-    vertical-align: middle;
-    line-height: 200px;
-    font-size: 12.5vw;
-    font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
-    color: black;
-    font-weight: bold; }
+.splash_partial {
+  display: none; }
+  .splash_partial .fancy-header {
+    border: 10px solid black;
+    height: 200px;
+    width: 40%;
+    margin: 100px auto 200px auto; }
+    .splash_partial .fancy-header .bg-overlay {
+      background-color: white;
+      text-align: center;
+      vertical-align: middle;
+      line-height: 200px;
+      font-size: 12.5vw;
+      font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
+      color: black;
+      font-weight: bold; }
 
 .post-loop_partial article {
   margin: 100px auto 100px auto; }
   .post-loop_partial article .mdl-card__title {
     height: 200px;
-    background: url("../../../content/images/theme/welcome_card.jpg"); }
-    .post-loop_partial article .mdl-card__title .mdl-card__title-text a {
+    background-size: cover !important; }
+    .post-loop_partial article .mdl-card__title .mdl-card__title-text {
+      width: 100%; }
+      .post-loop_partial article .mdl-card__title .mdl-card__title-text a {
+        color: white;
+        text-decoration: none; }
+    .post-loop_partial article .mdl-card__title .mdl-card__title-time {
+      font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
       color: white;
-      text-decoration: none; }
+      margin-left: 30px;
+      line-height: 35px;
+      padding: 0 10px;
+      background-color: rgba(0, 0, 0, 0.5); }
 
 /* Desktop Styles */
 /* Tablet Styles */
