--- a/content/themes/dev/assets/css/libs/material.css
+++ b/content/themes/dev/assets/css/libs/material.css
@@ -4276,7 +4276,7 @@ ul, ol {
   font-size: 13px;
   line-height: 18px;
   overflow: hidden;
-  padding: 16px 16px;
+  padding: 30px 15px 15px 30px;
   width: 90%; }
 
 .mdl-card__actions {
