--- a/content/themes/dev/assets/css/screen.css
+++ b/content/themes/dev/assets/css/screen.css
@@ -918,7 +918,7 @@ body.nav-opened .nav {
     width: 80%;
 /*    max-width: 710px;*/
     margin: 0 0 0 15em;
-    padding-bottom: 4rem;
+/*    padding-bottom: 4rem;*/
     border-bottom: #EBF2F6 1px solid;
     word-wrap: break-word;
 }
@@ -992,9 +992,8 @@ body:not(.post-template) .post-title {
 
 .post-date {
     display: inline-block;
-    margin-left: 8px;
-    padding-left: 12px;
-    border-left: #d5dbde 1px solid;
+/*pos*/
+/*    border-left: #d5dbde 1px solid;*/
     text-transform: uppercase;
     font-size: 1.3rem;
     white-space: nowrap;
