--- a/content/themes/dev/assets/css/home.css
+++ b/content/themes/dev/assets/css/home.css
@@ -46,22 +46,20 @@
   -o-transition: all 0.5s ease;
   transition: all 0.5s ease; }
 
-.splash_partial {
-  display: none; }
-  .splash_partial .fancy-header {
-    border: 10px solid black;
-    height: 200px;
-    width: 40%;
-    margin: 100px auto 200px auto; }
-    .splash_partial .fancy-header .bg-overlay {
-      background-color: white;
-      text-align: center;
-      vertical-align: middle;
-      line-height: 200px;
-      font-size: 12.5vw;
-      font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
-      color: black;
-      font-weight: bold; }
+.splash_partial .fancy-header {
+  border: 10px solid black;
+  height: 200px;
+  width: 40%;
+  margin: 100px auto 200px auto; }
+  .splash_partial .fancy-header .bg-overlay {
+    background-color: white;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 200px;
+    font-size: 12.5vw;
+    font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
+    color: black;
+    font-weight: bold; }
 
 .post-loop_partial article {
   margin: 100px auto 100px auto; }
@@ -84,6 +82,9 @@
 /* Desktop Styles */
 /* Tablet Styles */
 @media only screen and (max-width: 850px) {
+  .navigation_partial {
+    display: initial; }
+
   .splash-absent {
     margin: 0;
     -webkit-transition: all 0.5s ease;
