--- a/content/themes/dev/assets/css/sass/home.scss
+++ b/content/themes/dev/assets/css/sass/home.scss
@@ -73,7 +73,6 @@
 }
 
 .splash_partial {
-	display: none;
 
 	.fancy-header {
 		border: 10px solid black;
@@ -158,6 +157,10 @@
 
 /* Tablet Styles */
 @media only screen and (max-width : 850px)  {
+	.navigation_partial {
+		display: initial;
+	}
+
 	.splash-absent {
 		margin: 0;
 
