--- a/content/themes/dev/default.hbs
+++ b/content/themes/dev/default.hbs
@@ -21,6 +21,8 @@
     <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
 
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 
     {{! Ghost outputs important style and meta data with this tag }}
     {{ghost_head}}
