--- a/content/themes/dev/partials/navigation.hbs
+++ b/content/themes/dev/partials/navigation.hbs
@@ -23,7 +23,7 @@
   <div class="bg-overlay">
       <div class="fancy-header mdl-layout-title">
         <a href="/">
-          <img alt="{{@blog.title}}" src="../content/images/theme/color-hfon-skull.png" /> {{!-- src should be blog logo --}}
+          <img alt="{{@blog.title}}" src="{{@blog.logo}}" /> {{!-- src should be blog logo --}}
           <div class="header-text">HFON</div> {{!-- text should be abbrv of blog title --}}
         </a>
       </div>
