Home page & side nav finsihed

--- a/content/themes/dev/partials/navigation.hbs
+++ b/content/themes/dev/partials/navigation.hbs
@@ -23,8 +23,8 @@
   <div class="bg-overlay">
       <div class="fancy-header mdl-layout-title">
         <a href="/">
-          <img alt="{{@blog.title}}" src="{{@blog.logo}}" /> {{!-- src should be blog logo --}}
-          <div class="header-text">HFON</div> {{!-- text should be abbrv of blog title --}}
+          <img alt="{{@blog.title}}" src="{{@blog.logo}}" /> 
+          <div class="header-text">{{@blog.description}}</div> 
         </a>
       </div>
       <nav class="mdl-navigation">
