--- a/content/themes/dev/assets/css/screen.css
+++ b/content/themes/dev/assets/css/screen.css
@@ -917,7 +917,7 @@ body.nav-opened .nav {
     position: relative;
     width: 80%;
 /*    max-width: 710px;*/
-    margin: 0 0 0 15em;
+    margin: 0px auto 0 auto;
 /*    padding-bottom: 4rem;*/
     border-bottom: #EBF2F6 1px solid;
     word-wrap: break-word;
@@ -1063,7 +1063,9 @@ body:not(.post-template) .post-title {
    creating horizontal scroll - slight hack due to imperfections
    with browser width % calculations and rounding */
 .post-template .content {
-    overflow: hidden;
+/*    overflow: hidden;*/
+    margin-top:-200px; 
+    width: 100%;
 }
 
 /* Tweak the .post wrapper style */
