--- a/content/themes/dev/assets/css/libs/material.css
+++ b/content/themes/dev/assets/css/libs/material.css
@@ -6530,7 +6530,7 @@ ul, ol {
   @media screen and (max-width: 850px) {
     .mdl-layout__drawer-button {
       margin: 4px;
-      color: rgba(0, 0, 0, 0.5); } }
+      /*color: rgba(0, 0, 0, 0.5);*/ } }
   @media screen and (min-width: 851px) {
     .mdl-layout--fixed-drawer > .mdl-layout__drawer-button {
       display: none; } }
