--- a/content/themes/dev/partials/loop.hbs
+++ b/content/themes/dev/partials/loop.hbs
@@ -2,7 +2,7 @@
 {{#foreach posts}}
 
 <article class="mdl-card mdl-shadow--2dp demo-card-wide {{post_class}}">
-  <div class="mdl-card__title" style="background:url('{{image}}')">
+  <div class="mdl-card__title {{#if image}}" style="background:url({{image}}){{else}}{{/if}}">
     <h2 class="mdl-card__title-text">
       <a href="{{url}}">{{{title}}}</a>
       <div class="post-date mdl-card__title-time">{{date format="DD MMMM YYYY"}}</div>
@@ -12,11 +12,6 @@
   <div class="mdl-card__supporting-text">
     <p>{{excerpt words="100"}} <a class="read-more" href="{{url}}">&raquo;</a></p>
   </div>
-{{!--   <div class="mdl-card__menu">
-    <button class="mdl-button mdl-button--icon mdl-js-button mdl-js-ripple-effect">
-      <i class="material-icons">share</i>
-    </button>
-  </div> --}}
 </article>
 
 {{/foreach}}
