--- a/content/themes/dev/post.hbs
+++ b/content/themes/dev/post.hbs
@@ -6,13 +6,13 @@
 {{! Everything inside the #post tags pulls data from the post }}
 {{#post}}
 
-<header class="main-header post-head {{#if image}}" style="background-image: url({{image}}){{else}}no-cover{{/if}}">
-
-    <div class="navigation_partial">
-        <div class="mdl-layout mdl-js-layout mdl-layout--overlay-drawer-button">
-            {{> "navigation"}}
-        </div>
+<div class="navigation_partial">
+    <div class="mdl-layout mdl-js-layout mdl-layout--overlay-drawer-button">
+        {{> "navigation"}}
     </div>
+</div>
+
+<header class="main-header post-head" style="background-image: url({{image}})">
 
 </header>
 
@@ -23,9 +23,6 @@
         <div class="demo-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="post-content mdl-color--white mdl-shadow--4dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
- {{!--            <div class="demo-crumbs mdl-color-text--grey-500">
-              Google &gt; Material Design Lite &gt; How to install MDL
-            </div> --}}
             <h1 class="post-title">{{title}}</h1>
              {{content}}
 
@@ -40,62 +37,11 @@
                 </figure>
                 {{/if}}
 
-    {{!--             <section class="author">
-                    <h4><a href="{{url}}">{{name}}</a></h4>
-
-                    {{#if bio}}
-                        <p>{{bio}}</p>
-                    {{else}}
-                        <p>Read <a href="{{url}}">more posts</a> by this author.</p>
-                    {{/if}}
-                    <div class="author-meta">
-                        {{#if location}}<span class="author-location icon-location">{{location}}</span>{{/if}}
-                        {{#if website}}<span class="author-link icon-link"><a href="{{website}}">{{website}}</a></span>{{/if}}
-                    </div>
-                </section>
-     --}}
             {{/author}}
-
-    {{!--             <section class="share">
-                    <h4>Share this post</h4>
-                    <a class="icon-twitter" href="https://twitter.com/share?text={{encode title}}&amp;url={{url absolute="true"}}"
-                        onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
-                        <span class="hidden">Twitter</span>
-                    </a>
-                    <a class="icon-facebook" href="https://www.facebook.com/sharer/sharer.php?u={{url absolute="true"}}"
-                        onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">
-                        <span class="hidden">Facebook</span>
-                    </a>
-                    <a class="icon-google-plus" href="https://plus.google.com/share?url={{url absolute="true"}}"
-                       onclick="window.open(this.href, 'google-plus-share', 'width=490,height=530');return false;">
-                        <span class="hidden">Google+</span>
-                    </a>
-                </section> --}}
-
+            
             </footer>
           </div>
         </div>
-
-{{!-- 
-        <header class="post-header">
-            <h1 class="post-title">{{title}}</h1>
-            <section class="post-meta">
-                <time class="post-date" datetime="{{date format='YYYY-MM-DD'}}">{{date format="DD MMMM YYYY"}}</time> {{tags prefix=" on "}}
-            </section>
-        </header>
-
-        <section class="post-content">
-            {{content}}
-        </section>
- --}}
-
-
-
-
-
-
-
-
     </article>
 </main>
 
