--- a/content/themes/dev/post.hbs
+++ b/content/themes/dev/post.hbs
@@ -33,12 +33,12 @@
 
                 {{#if image}}
                 <figure class="author-image">
-                    <a class="img" href="{{url}}" style="background-image: url({{image}})"><span class="hidden">{{name}}'s Picture</span></a>
+                    <a class="img" style="background-image: url({{image}})"><span class="hidden">{{name}}'s Picture</span></a>
                 </figure>
                 {{/if}}
 
             {{/author}}
-            
+
             </footer>
           </div>
         </div>
