--- a/content/themes/dev/assets/css/sass/home.scss
+++ b/content/themes/dev/assets/css/sass/home.scss
@@ -12,6 +12,7 @@
 	.post-title {
 		padding-bottom: 50px;
 	}
+
 }
 
 .navigation_partial {
@@ -101,6 +102,7 @@
 
 	article {
 		margin: 100px auto 100px auto;
+		font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
 
 		.mdl-card__title {
 			height: 200px;
