--- a/content/themes/dev/assets/css/home.css
+++ b/content/themes/dev/assets/css/home.css
@@ -66,7 +66,8 @@
     font-weight: bold; }
 
 .post-loop_partial article {
-  margin: 100px auto 100px auto; }
+  margin: 100px auto 100px auto;
+  font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif; }
   .post-loop_partial article .mdl-card__title {
     height: 200px;
     background-size: cover !important;
