--- a/content/themes/dev/partials/navigation.hbs
+++ b/content/themes/dev/partials/navigation.hbs
@@ -26,7 +26,7 @@
         </a>
       </div>
       <nav class="mdl-navigation">
-        <a class="mdl-navigation__link" href="">About</a>
+        <a class="mdl-navigation__link" href="/about">About</a>
         <a class="mdl-navigation__link" href="">Essays</a>
         <a class="mdl-navigation__link" href="">Development</a>
         <a class="mdl-navigation__link" href="">Portfolio</a>
