--- a/content/themes/dev/page-about.hbs
+++ b/content/themes/dev/page-about.hbs
@@ -1,51 +1,92 @@
 {{!< default}}
 
 {{#post}}
-
-<div class="navigation_partial">
-    <div class="mdl-layout mdl-js-layout mdl-layout--overlay-drawer-button">
-        {{> "navigation"}}
-    </div>
-</div>
-
-<header class="main-header post-head" style="background-image: url({{image}})">
-
-</header>
-
-<main class="content" role="main">
-    <article class="{{post_class}}">
-
-
-        <div class="demo-container mdl-grid">
-          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="post-content mdl-color--white mdl-shadow--4dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-{{!--             <h1 class="post-title">{{title}}</h1> --}}
-             {{content}}
-
-            <footer class="post-footer">
-            </footer>
-          </div>
+<div class="about_partial">
+    <div class="navigation_partial">
+        <div class="mdl-layout mdl-js-layout mdl-layout--overlay-drawer-button">
+            {{> "navigation"}}
         </div>
-    </article>
-</main>
+    </div>
 
-<aside class="read-next">
-    {{#next_post}}
-    <a class="read-next-story {{#if image}}" style="background-image: url({{image}}){{else}}no-cover{{/if}}" href="{{url}}">
-        <section class="post">
-            <h2>{{title}}</h2>
-            <p>{{excerpt words="19"}}&hellip;</p>
-        </section>
-    </a>
-    {{/next_post}}
-    {{#prev_post}}
-    <a class="read-next-story prev {{#if image}}" style="background-image: url({{image}}){{else}}no-cover{{/if}}" href="{{url}}">
-        <section class="post">
-            <h2>{{title}}</h2>
-            <p>{{excerpt words="19"}}&hellip;</p>
-        </section>
-    </a>
-    {{/prev_post}}
-</aside>
+    <header class="main-header post-head" style="background-image: url({{image}})">
 
+    </header>
+
+    <main class="content" role="main">
+        <article class="{{post_class}}">
+
+
+            <div class="demo-container mdl-grid">
+              <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+              <div class="post-content mdl-color--white mdl-shadow--4dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+
+                <h1 class="post-title">{{title}}</h1>
+                    
+                <div class="about_main-quote">    
+                    <span class="quote-body">As the geometer, who endeavours<br>
+                    To square the circle, and discovers not,<br>
+                    By taking thought, the principle he wants,<br><br>
+
+                    Even such was I at that [beatific] apparition;<br>
+                    I wished to see how the image to the circle<br>
+                    Conformed itself, and how it there finds place.<br><br></span>
+
+                    <span class="quote-author">Canto XXXIII, Paradiso, Dante Aligheri</span>
+                </div>
+
+                {{!-- ![](/content/images/2015/Jan/3741213-1.jpg)  --}}
+
+                <p> My name is Jackson Souza, I'm a full-stack web developer at Azuqua and (recently) yet another proud California to Washington transplant. </p>
+
+                <p>To a fault, I tend to prefer the esoteric over the useful, the difficult to the trivial, and the complex over the simple. Though it might seem spot on to begin this page with a verbose quote from a forgotten book of a medieval poet (with a questionable translation), verbose and forgotten are just the words I don't want describing my work. With a nod towards the greater mysteries of the universe, my code as well as my writing tends to be succinct, biting, academic and above all, organic.</p>
+
+                <p>The purpose of this blog is to host my development outlines/logs, any longform writing that I do, and my portfolio of work. I am inspired by combination prose/code writers like Jeff Atwood, Kevin Simler and Douglas Hofstadter; though I confess that am fueled by writing so worn by translation that it hardly seems useful. I commonly go by "jaquinas" online; a name bestowed on me by a college roommate in light of my then fascination with medieval scholasticisim and St. Thomas Aquinas. <br> <br>
+
+                Barring my philosophical motivations, I try to have more output than input. I like making things because it is fun - plain and simple. That's not to say that creating more than one consumes is easy, and when I become ravenous in my consumption, I like Design Within Reach, Vanilla Mochi Bon Bons, eSports, Punk Music, Woodworking (otherwise known as: "trying to make furnature from Design Within Reach"), Mike Giant's tumblr and my cat, Wednesday.</p>
+
+                <h3>"Head Full of Nothing"?</h3>
+                <iframe width="560" height="315" src="//www.youtube.com/embed/-l1eYwg22V4?start=312" frameborder="0" allowfullscreen></iframe>
+
+                <p>I remember singing this one with some friends at a festival in Santa Barbara. Here's a video of the same festival in that, if you squint hard enough, the singer looks just like my father. Dad could pull it off, I have faith.</p>
+
+                <p>Every artist needs motivation, so, below I have placed links to what I am currently reading, listening to (music) and looking at (imagery).</p>
+
+                <h4>On my bookshelf</h4>
+
+                <h4>In my headphones</h4>
+
+                <h4>On my walls</h4>
+
+
+                 <p>A note: The development logs are a peek inside my head, and my brain is certainly no Hemingway. In this regard, I often move quickly from one project to the next so, please excuse spelling and non-coherency. I often throw hasty sketches and example code on these as well, in hope I can one day chuckle at them with my wizard beard and coke bottle glasses. Rest assured that all portfolio and longform items can be held to a higher standard. Thank you & enjoy!</p>
+
+                <p>This blog is hosted on the Ghost.js platform. The theme is custom and for download here.</p>
+
+
+                <footer class="post-footer">
+                </footer>
+              </div>
+            </div>
+        </article>
+    </main>
+
+    <aside class="read-next">
+        {{#next_post}}
+        <a class="read-next-story {{#if image}}" style="background-image: url({{image}}){{else}}no-cover{{/if}}" href="{{url}}">
+            <section class="post">
+                <h2>{{title}}</h2>
+                <p>{{excerpt words="19"}}&hellip;</p>
+            </section>
+        </a>
+        {{/next_post}}
+        {{#prev_post}}
+        <a class="read-next-story prev {{#if image}}" style="background-image: url({{image}}){{else}}no-cover{{/if}}" href="{{url}}">
+            <section class="post">
+                <h2>{{title}}</h2>
+                <p>{{excerpt words="19"}}&hellip;</p>
+            </section>
+        </a>
+        {{/prev_post}}
+    </aside>
+</div>
 {{/post}}
