--- a/content/themes/dev/assets/css/sass/home.scss
+++ b/content/themes/dev/assets/css/sass/home.scss
@@ -15,6 +15,41 @@
 
 }
 
+.about_page {
+
+	.post-content{
+		margin-top: 75px!important;
+	}
+
+	.book-resource-img img {
+		width:auto;
+		max-height: 300px;
+	}
+
+	.art-resource-img img {
+		width:auto;
+		max-height: 300px;
+	}
+
+	.buffer {
+		padding-top: 100px;
+	}
+
+	.about_quote {
+		width: 100%; 
+
+		font-size: 14px;
+		font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
+		font-style: italic;
+		font-weight: 100;
+
+		.about_quote-body {
+			text-align:center;
+			margin: 0px auto 0 auto;
+		}
+	}
+}
+
 .navigation_partial {
 	display: none;
 
@@ -131,8 +166,11 @@
 
 
 /* Desktop Styles */
-@media only screen and (max-width : 1024px)  {
+@media only screen and (min-width : 850px)  {
 
+	.about_quote { 
+		padding-bottom:100px;
+	}
 
 }
 
@@ -150,6 +188,10 @@
     	-moz-transition: all 0.5s ease;
     	-o-transition: all 0.5s ease;
     	transition: all 0.5s ease;
+	}
+
+	.about_quote { 
+		padding-bottom: 30px;
 	}
 
 
