--- a/content/themes/dev/page-about.hbs
+++ b/content/themes/dev/page-about.hbs
@@ -1,7 +1,7 @@
 {{!< default}}
 
 {{#post}}
-<div class="about_partial">
+<div class="about_page">
     <div class="navigation_partial">
         <div class="mdl-layout mdl-js-layout mdl-layout--overlay-drawer-button">
             {{> "navigation"}}
@@ -19,49 +19,64 @@
             <div class="demo-container mdl-grid">
               <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
               <div class="post-content mdl-color--white mdl-shadow--4dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-
-                <h1 class="post-title">{{title}}</h1>
                     
-                <div class="about_main-quote">    
-                    <span class="quote-body">As the geometer, who endeavours<br>
-                    To square the circle, and discovers not,<br>
-                    By taking thought, the principle he wants,<br><br>
+                <div class="about_quote mdl-cell mdl-cell--12-col">
+                    <div class="about_quote-body mdl-cell mdl-cell--12-col">
+                        As the geometer, who endeavours<br>
+                        To square the circle, and discovers not,<br>
+                        By taking thought, the principle he wants,<br><br>
 
-                    Even such was I at that [beatific] apparition;<br>
-                    I wished to see how the image to the circle<br>
-                    Conformed itself, and how it there finds place.<br><br></span>
+                        Even such was I at that [beatific] apparition;<br>
+                        I wished to see how the image to the circle<br>
+                        Conformed itself, and how it there finds place.<br><br>
 
-                    <span class="quote-author">Canto XXXIII, Paradiso, Dante Aligheri</span>
+                        <span class="about_quote-author">Canto XXXIII, Paradiso, Dante Aligheri</span>
+                    </div>
+
                 </div>
 
-                {{!-- ![](/content/images/2015/Jan/3741213-1.jpg)  --}}
+                <div class="about_content-container mdl-cell--12-col">   
+                    {{content}}
 
-                <p> My name is Jackson Souza, I'm a full-stack web developer at Azuqua and (recently) yet another proud California to Washington transplant. </p>
+                    <div class="about_content-resource-grid mdl-grid">
+                        <h4 class="mdl-cell mdl-cell--12-col">Books</h4>
+                        <div class="book-resource-img mdl-cell mdl-cell--6-col">
+                            <img src= "../content/images/theme/geb.jpg">
+                        </div>
+                        <div class="book-resource-img mdl-cell mdl-cell--6-col">
+                            <img src= "../content/images/theme/a-dance-with.jpg">
+                        </div>
+                    </div>
 
-                <p>To a fault, I tend to prefer the esoteric over the useful, the difficult to the trivial, and the complex over the simple. Though it might seem spot on to begin this page with a verbose quote from a forgotten book of a medieval poet (with a questionable translation), verbose and forgotten are just the words I don't want describing my work. With a nod towards the greater mysteries of the universe, my code as well as my writing tends to be succinct, biting, academic and above all, organic.</p>
+                    <div class="about_content-resource-grid mdl-grid">
+                        <h4 class="mdl-cell mdl-cell--12-col">Music</h4>
+                        <div class="mdl-cell mdl-cell--12-col">
+                            <iframe width="560" height="400" src="//www.youtube.com/embed/mb6Jc4juSF8" frameborder="0" allowfullscreen></iframe>
+                            <iframe width="560" height="400" src="//www.youtube.com/embed/5VrDvHeh9sA" frameborder="0" allowfullscreen></iframe>
+                        </div>
+                    </div>
 
-                <p>The purpose of this blog is to host my development outlines/logs, any longform writing that I do, and my portfolio of work. I am inspired by combination prose/code writers like Jeff Atwood, Kevin Simler and Douglas Hofstadter; though I confess that am fueled by writing so worn by translation that it hardly seems useful. I commonly go by "jaquinas" online; a name bestowed on me by a college roommate in light of my then fascination with medieval scholasticisim and St. Thomas Aquinas. <br> <br>
+                    <div class="about_content-resource-grid mdl-grid">
+                        <h4 class="mdl-cell mdl-cell--12-col">Art</h4>
+                        <div class="art-resource-img mdl-cell mdl-cell--6-col">
+                            <a href="http://rebel8.com/blogs/giant"><img src= "../content/images/theme/giant.jpg">
+                        </div>
+                        <div class="art-resource-img mdl-cell mdl-cell--6-col">
+                            <a href="https://en.wikipedia.org/wiki/Paul_Laffoley"><img src= "../content/images/theme/laffoley.jpg"></a>
+                        </div>
+                    </div>
 
-                Barring my philosophical motivations, I try to have more output than input. I like making things because it is fun - plain and simple. That's not to say that creating more than one consumes is easy, and when I become ravenous in my consumption, I like Design Within Reach, Vanilla Mochi Bon Bons, eSports, Punk Music, Woodworking (otherwise known as: "trying to make furnature from Design Within Reach"), Mike Giant's tumblr and my cat, Wednesday.</p>
+                    <h3 class="buffer">"Head Full of Nothing"?</h3>
+                
+                    <iframe width="560" height="24" src="//www.youtube.com/embed/-l1eYwg22V4?start=312&autohide=0" frameborder="0" allowfullscreen></iframe>
 
-                <h3>"Head Full of Nothing"?</h3>
-                <iframe width="560" height="315" src="//www.youtube.com/embed/-l1eYwg22V4?start=312" frameborder="0" allowfullscreen></iframe>
-
-                <p>I remember singing this one with some friends at a festival in Santa Barbara. Here's a video of the same festival in that, if you squint hard enough, the singer looks just like my father. Dad could pull it off, I have faith.</p>
-
-                <p>Every artist needs motivation, so, below I have placed links to what I am currently reading, listening to (music) and looking at (imagery).</p>
-
-                <h4>On my bookshelf</h4>
-
-                <h4>In my headphones</h4>
-
-                <h4>On my walls</h4>
+                    <p>I remember singing this one with some friends at a festival in Santa Barbara. Here's a <a href="https://www.youtube.com/watch?v=3iPcHt1xUuk">video</a> of the same festival in that, if you squint hard enough, the singer looks just like my father. Dad could pull it off, I have faith.</p>
 
 
-                 <p>A note: The development logs are a peek inside my head, and my brain is certainly no Hemingway. In this regard, I often move quickly from one project to the next so, please excuse spelling and non-coherency. I often throw hasty sketches and example code on these as well, in hope I can one day chuckle at them with my wizard beard and coke bottle glasses. Rest assured that all portfolio and longform items can be held to a higher standard. Thank you & enjoy!</p>
+                     <p>A note: The development logs are a peek inside my head, and my brain is certainly no Hemingway. In this regard, I often move quickly from one project to the next so, please excuse spelling and non-coherency. I often throw hasty sketches and example code on these as well, in hope I can one day chuckle at them with my wizard beard and coke bottle glasses. Rest assured that all portfolio and longform items can be held to a higher standard. Thank you & enjoy!</p>
 
-                <p>This blog is hosted on the Ghost.js platform. The theme is custom and for download here.</p>
-
+                    <p>This blog is hosted on the Ghost.js platform. The theme is custom and for download <a href="/">here</a>.</p>
+                </div>
 
                 <footer class="post-footer">
                 </footer>
