--- a/content/themes/dev/partials/navigation.hbs
+++ b/content/themes/dev/partials/navigation.hbs
@@ -29,7 +29,7 @@
         <a class="mdl-navigation__link" href="/about">About</a>
         <a class="mdl-navigation__link" href="">Essays</a>
         <a class="mdl-navigation__link" href="">Development</a>
-        <a class="mdl-navigation__link" href="">Portfolio</a>
+        <a class="mdl-navigation__link" href="/work">Portfolio</a>
       </nav>
     </div>
   </div>
