--- a/content/themes/dev/page-work.hbs
+++ b/content/themes/dev/page-work.hbs
@@ -13,10 +13,10 @@
 
     <main class="content" role="main">
 
-        <article class="mdl-card top-card mdl-shadow--2dp card-small">
+        <article class="mdl-card head-card mdl-shadow--2dp">
           <div class="mdl-card__title small-title">
             <h2 class="mdl-card__title-text">
-              Portfolio
+              PORTFOLIO
             </h2>
           </div>
 
@@ -25,28 +25,38 @@
           </div>
         </article>
 
-        <article class="skillgenie mdl-card mdl-shadow--2dp demo-card-wide">
-          <div class="mdl-card__title" style="background:url(../content/images/theme/page-work/skillgenie-1.png)">
 
+        <div class="mdl-cell--12-col card-row">
+            <div class="port-item mdl-cell mdl-cell--6-col">
+              <article class="mdl-card mdl-shadow--2dp demo-card-wide">
+                <div class="mdl-card__title" style="background:url(../content/images/theme/page-work/skillgenie-1.png)">
+
+                </div>
+                <div class="mdl-card__supporting-text">
+                  <p><h2><a href="http://headfullofnothing.com/skillgenie/">Skillgenie</a></h2> is a platform that facilitates independent education via "learning analytics" - completely apart from the specifics of the information. At its core, the app creates a habitual feedback loop for learning in one system, by one person. Skillgenie is designed to record one’s applications of their self-learning (currently skewed towards actionable skills like golf or chess) and create friendly visualizations, give helpful tips and link to a community, all while seeking to further the user's ability to gather, retain and use information. Below is a sample of a small marketing page I designed and implemented, you can find it <a href="http://skillgenie.net" target="_blank">here</a>. As for the app itself, which is not entirely represented in this short description, I deeply encourage you to read the parent post. Here is a link to the latest <a href="https://damp-depths-5898.herokuapp.com/">build</a>. This is my proudest work to date, I hope you enjoy reading about it. <a class="read-more" href="http://headfullofnothing.com/skillgenie/">&raquo;</a></p>
+                </div>
+              </article>
+            </div>
+  
+
+            <div class="port-item mdl-cell mdl-cell--6-col">
+              <article class="mdl-card mdl-shadow--2dp demo-card-wide">
+                <div class="mdl-card__title" style="background:url(../content/images/theme/page-work/skillgenie-1.png)">
+
+                </div>
+                <div class="mdl-card__supporting-text">
+                  <p><h2><a href="http://headfullofnothing.com/skillgenie/">Skillgenie</a></h2> is a platform that facilitates independent education via "learning analytics" - completely apart from the specifics of the information. At its core, the app creates a habitual feedback loop for learning in one system, by one person. Skillgenie is designed to record one’s applications of their self-learning (currently skewed towards actionable skills like golf or chess) and create friendly visualizations, give helpful tips and link to a community, all while seeking to further the user's ability to gather, retain and use information. Below is a sample of a small marketing page I designed and implemented, you can find it <a href="http://skillgenie.net" target="_blank">here</a>. As for the app itself, which is not entirely represented in this short description, I deeply encourage you to read the parent post. Here is a link to the latest <a href="https://damp-depths-5898.herokuapp.com/">build</a>. This is my proudest work to date, I hope you enjoy reading about it. <a class="read-more" href="http://headfullofnothing.com/skillgenie/">&raquo;</a></p>
+                </div>
+              </article>
           </div>
-          <div class="mdl-card__supporting-text">
-            <p><h2><a href="http://headfullofnothing.com/skillgenie/">Skillgenie</a></h2> is a platform that facilitates independent education via "learning analytics" - completely apart from the specifics of the information. At its core, the app creates a habitual feedback loop for learning in one system, by one person. Skillgenie is designed to record one’s applications of their self-learning (currently skewed towards actionable skills like golf or chess) and create friendly visualizations, give helpful tips and link to a community, all while seeking to further the user's ability to gather, retain and use information. Below is a sample of a small marketing page I designed and implemented, you can find it <a href="http://skillgenie.net" target="_blank">here</a>. As for the app itself, which is not entirely represented in this short description, I deeply encourage you to read the parent post. Here is a link to the latest <a href="https://damp-depths-5898.herokuapp.com/">build</a>. This is my proudest work to date, I hope you enjoy reading about it. <a class="read-more" href="http://headfullofnothing.com/skillgenie/">&raquo;</a></p>
-          </div>
-        </article>
-
-        <article class="skillgenie mdl-card mdl-shadow--2dp demo-card-wide">
-          <div class="mdl-card__title" style="background:url(../content/images/theme/page-work/skillgenie-1.png)">
-
-          </div>
-          <div class="mdl-card__supporting-text">
-            <p><h2><a href="http://headfullofnothing.com/skillgenie/">Skillgenie</a></h2> is a platform that facilitates independent education via "learning analytics" - completely apart from the specifics of the information. At its core, the app creates a habitual feedback loop for learning in one system, by one person. Skillgenie is designed to record one’s applications of their self-learning (currently skewed towards actionable skills like golf or chess) and create friendly visualizations, give helpful tips and link to a community, all while seeking to further the user's ability to gather, retain and use information. Below is a sample of a small marketing page I designed and implemented, you can find it <a href="http://skillgenie.net" target="_blank">here</a>. As for the app itself, which is not entirely represented in this short description, I deeply encourage you to read the parent post. Here is a link to the latest <a href="https://damp-depths-5898.herokuapp.com/">build</a>. This is my proudest work to date, I hope you enjoy reading about it. <a class="read-more" href="http://headfullofnothing.com/skillgenie/">&raquo;</a></p>
-          </div>
-        </article>
+        </div>
 
 
+    </main>
+{{/post}}
 
 
-            <div class="demo-container mdl-grid">
+  {{!--           <div class="demo-container mdl-grid">
               <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
               <div class="post-content mdl-color--white mdl-shadow--4dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
                     
@@ -234,7 +244,7 @@
         {{/prev_post}}
     </aside>
 </div>
-{{/post}}
+{{/post}} --}}
 
 
 {{!-- 
