--- a/content/themes/dev/page-work.hbs
+++ b/content/themes/dev/page-work.hbs
@@ -29,11 +29,33 @@
         <div class="mdl-cell--12-col card-row">
             <div class="port-item mdl-cell mdl-cell--6-col">
               <article class="mdl-card mdl-shadow--2dp demo-card-wide">
-                <div class="mdl-card__title" style="background:url(../content/images/theme/page-work/skillgenie-1.png)">
+                  <div class="mdl-card__title" style="background:url(../content/images/theme/page-work/skillgenie-1.png)">
+                    <div class="bg-overlay">
+                    </div>
 
-                </div>
+                    <h2 class="mdl-card__title-text">
+                      <a href="/skillgenie">SKILLGENIE</a>
+                    </h2>
+
+                  </div>
+              
                 <div class="mdl-card__supporting-text">
-                  <p><h2><a href="http://headfullofnothing.com/skillgenie/">Skillgenie</a></h2> is a platform that facilitates independent education via "learning analytics" - completely apart from the specifics of the information. At its core, the app creates a habitual feedback loop for learning in one system, by one person. Skillgenie is designed to record one’s applications of their self-learning (currently skewed towards actionable skills like golf or chess) and create friendly visualizations, give helpful tips and link to a community, all while seeking to further the user's ability to gather, retain and use information. Below is a sample of a small marketing page I designed and implemented, you can find it <a href="http://skillgenie.net" target="_blank">here</a>. As for the app itself, which is not entirely represented in this short description, I deeply encourage you to read the parent post. Here is a link to the latest <a href="https://damp-depths-5898.herokuapp.com/">build</a>. This is my proudest work to date, I hope you enjoy reading about it. <a class="read-more" href="http://headfullofnothing.com/skillgenie/">&raquo;</a></p>
+
+                  <p class="desc">A web app that facilitates independent education via "learning analytics" - completely apart from the specifics of the information.
+                  </p>
+
+                  <h5>LINKS</h5>
+                  <a href="https://damp-depths-5898.herokuapp.com/">Alpha Build</a><br>
+                  <a href="http://skillgenie.net/">http://skillgenie.net/</a>
+
+                  <h5>DATE</h5>
+                  <p>Q2 2014 - May 2015</p>
+
+                  <h5>CONTRIBUTIONS</h5>
+                  <li>Full-stack web development in Javascript</li>
+                  <li>Supporting research in philosophy of psychology, metacognition & cognitive science</li>
+
+                  <a class="read-more" href="/skillgenie">Read More&raquo;</a>
                 </div>
               </article>
             </div>
@@ -41,17 +63,118 @@
 
             <div class="port-item mdl-cell mdl-cell--6-col">
               <article class="mdl-card mdl-shadow--2dp demo-card-wide">
-                <div class="mdl-card__title" style="background:url(../content/images/theme/page-work/skillgenie-1.png)">
+                <div class="mdl-card__title" style="background:url(../content/images/theme/page-work/xsolla-1.png)">
+
+                  <div class="bg-overlay">
+                  </div>
+
+                  <h2 class="mdl-card__title-text">
+                    <a href="/xsolla">XSOLLA</a>
+                  </h2>
 
                 </div>
                 <div class="mdl-card__supporting-text">
-                  <p><h2><a href="http://headfullofnothing.com/skillgenie/">Skillgenie</a></h2> is a platform that facilitates independent education via "learning analytics" - completely apart from the specifics of the information. At its core, the app creates a habitual feedback loop for learning in one system, by one person. Skillgenie is designed to record one’s applications of their self-learning (currently skewed towards actionable skills like golf or chess) and create friendly visualizations, give helpful tips and link to a community, all while seeking to further the user's ability to gather, retain and use information. Below is a sample of a small marketing page I designed and implemented, you can find it <a href="http://skillgenie.net" target="_blank">here</a>. As for the app itself, which is not entirely represented in this short description, I deeply encourage you to read the parent post. Here is a link to the latest <a href="https://damp-depths-5898.herokuapp.com/">build</a>. This is my proudest work to date, I hope you enjoy reading about it. <a class="read-more" href="http://headfullofnothing.com/skillgenie/">&raquo;</a></p>
+
+                 <p class="desc">A small company that "offers a wide selection of ready-made solutions to help game developers monetize their games and increase conversion".
+                  </p>
+
+                  <h5>LINKS</h5>
+                  <a href="/">http://tacoapp.com</a><br>
+                  <a href="/">http://tacoapp.com</a>
+
+
+                  <h5>DATE</h5>
+                  <p>December 2012 - Present</p>
+
+                  <h5>CONTRIBUTIONS</h5>
+                  <li>Co-Founder</li>
+                  <li>Co-Founder</li>
+                  <li>Co-Founder</li>
+
+                  <a class="read-more" href="/xsolla">Read More&raquo;</a>
+
                 </div>
               </article>
           </div>
         </div>
 
 
+          <div class="mdl-cell--12-col card-row">
+            <div class="port-item mdl-cell mdl-cell--6-col">
+              <article class="mdl-card mdl-shadow--2dp demo-card-wide">
+                  <div class="mdl-card__title" style="background:url(../content/images/theme/page-work/skillgenie-1.png)">
+                    <div class="bg-overlay">
+                    </div>
+
+                    <h2 class="mdl-card__title-text">
+                      <a href="/skillgenie">SKILLGENIE</a>
+                    </h2>
+
+                  </div>
+              
+                <div class="mdl-card__supporting-text">
+
+                  <p class="desc">A web app that facilitates independent education via "learning analytics" - completely apart from the specifics of the information.
+                  </p>
+
+                  <h5>LINKS</h5>
+                  <a href="https://damp-depths-5898.herokuapp.com/">Alpha Build</a><br>
+                  <a href="http://skillgenie.net/">http://skillgenie.net/</a>
+
+                  <h5>DATE</h5>
+                  <p>Q2 2014 - May 2015</p>
+
+                  <h5>CONTRIBUTIONS</h5>
+                  <li>Full-stack web development in Javascript</li>
+                  <li>Supporting research in philosophy of psychology, metacognition & cognitive science</li>
+
+                  <a class="read-more" href="/skillgenie">Read More&raquo;</a>
+                </div>
+              </article>
+            </div>
+  
+
+            <div class="port-item mdl-cell mdl-cell--6-col">
+              <article class="mdl-card mdl-shadow--2dp demo-card-wide">
+                <div class="mdl-card__title" style="background:url(../content/images/theme/page-work/xsolla-1.png)">
+
+                  <div class="bg-overlay">
+                  </div>
+
+                  <h2 class="mdl-card__title-text">
+                    <a href="/xsolla">XSOLLA</a>
+                  </h2>
+
+                </div>
+                <div class="mdl-card__supporting-text">
+
+                 <p class="desc">A small company that "offers a wide selection of ready-made solutions to help game developers monetize their games and increase conversion".
+                  </p>
+
+                  <h5>LINKS</h5>
+                  <a href="/">http://tacoapp.com</a><br>
+                  <a href="/">http://tacoapp.com</a>
+
+
+                  <h5>DATE</h5>
+                  <p>December 2012 - Present</p>
+
+                  <h5>CONTRIBUTIONS</h5>
+                  <li>Co-Founder</li>
+                  <li>Co-Founder</li>
+                  <li>Co-Founder</li>
+
+                  <a class="read-more" href="/xsolla">Read More&raquo;</a>
+
+                </div>
+              </article>
+          </div>
+        </div>
+
+
+
+
+      </div>
     </main>
 {{/post}}
 
