--- a/content/themes/dev/assets/css/home.css
+++ b/content/themes/dev/assets/css/home.css
@@ -30,16 +30,8 @@
     text-align: center;
     margin: 0px auto 0 auto; }
 
-.portfolio_page .material-icons {
-  position: fixed;
-  padding-top: 10px; }
-.portfolio_page .navigation_partial {
-  margin-top: -100px; }
-.portfolio_page .post-head {
-  position: fixed; }
 .portfolio_page .content {
-  margin-top: 100px !important;
-  padding-top: 100px; }
+  margin-top: -425px !important; }
 .portfolio_page .head-card {
   margin-top: 100px !important;
   min-height: 100px; }
@@ -50,8 +42,40 @@
   .portfolio_page .card-row .port-item {
     display: inline-block;
     margin: 0 auto 0 auto; }
+.portfolio_page .port-item .mdl-card .bg-overlay {
+  background-color: rgba(0, 0, 0, 0.75);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 350px; }
+.portfolio_page .port-item .mdl-card .mdl-card__title {
+  z-index: 0; }
+  .portfolio_page .port-item .mdl-card .mdl-card__title .mdl-card__title-text {
+    font-size: 50px;
+    margin: 0 auto 100px auto;
+    padding: 20px;
+    z-index: 200; }
+    .portfolio_page .port-item .mdl-card .mdl-card__title .mdl-card__title-text a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold; }
+.portfolio_page .port-item .mdl-card .mdl-card__supporting-text {
+  border: 1px solid black;
+  border-top: none; }
+  .portfolio_page .port-item .mdl-card .mdl-card__supporting-text a {
+    line-height: 20px; }
+  .portfolio_page .port-item .mdl-card .mdl-card__supporting-text h5, .portfolio_page .port-item .mdl-card .mdl-card__supporting-text .read-more {
+    padding-top: 25px; }
+  .portfolio_page .port-item .mdl-card .mdl-card__supporting-text p {
+    margin-bottom: 0; }
+  .portfolio_page .port-item .mdl-card .mdl-card__supporting-text li {
+    line-height: 20px; }
+  .portfolio_page .port-item .mdl-card .mdl-card__supporting-text .read-more {
+    float: right;
+    margin: 0 10px 10px 0; }
 .portfolio_page .mdl-card {
-  width: 80%;
+  width: 81%;
   margin: 0 auto 75px auto;
   background-color: rgba(255, 255, 255, 0); }
   .portfolio_page .mdl-card .small-title {
@@ -65,11 +89,11 @@
       border: 5px solid white;
       padding: 10px; }
   .portfolio_page .mdl-card .mdl-card__title {
-    height: 600px;
+    height: 350px;
     background-size: cover !important; }
   .portfolio_page .mdl-card .mdl-card__supporting-text {
-    background-color: white;
-    width: 100%; }
+    width: initial;
+    background-color: white; }
 
 .navigation_partial {
   display: none; }
