Tag-partial-done

--- a/content/themes/dev/assets/css/sass/home.scss
+++ b/content/themes/dev/assets/css/sass/home.scss
@@ -251,6 +251,14 @@
 	}
 }
 
+.tag_partial {
+	.page-title {
+		color: black;
+		text-align: center;
+		margin-top: 50px;
+	}
+}
+
 .post-loop_partial {
 
 	article {
