--- a/content/themes/dev/partials/navigation.hbs
+++ b/content/themes/dev/partials/navigation.hbs
@@ -27,8 +27,8 @@
       </div>
       <nav class="mdl-navigation">
         <a class="mdl-navigation__link" href="/about">About</a>
-        <a class="mdl-navigation__link" href="">Essays</a>
-        <a class="mdl-navigation__link" href="">Development</a>
+        <a class="mdl-navigation__link" href="/">Essays</a>
+        <a class="mdl-navigation__link" href="/tag/dev">Development</a>
         <a class="mdl-navigation__link" href="/work">Portfolio</a>
       </nav>
     </div>
