--- a/content/themes/dev/assets/css/home.css
+++ b/content/themes/dev/assets/css/home.css
@@ -150,6 +150,11 @@
     color: black;
     font-weight: bold; }
 
+.tag_partial .page-title {
+  color: black;
+  text-align: center;
+  margin-top: 50px; }
+
 .post-loop_partial article {
   margin: 100px auto 100px auto;
   font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif; }
