--- a/content/themes/dev/tag.hbs
+++ b/content/themes/dev/tag.hbs
@@ -1,32 +1,26 @@
 {{!< default}}
-{{! The tag above means - insert everything in this file into the {body} of the default.hbs template }}
 
-{{! If we have a tag cover, display that - else blog cover - else nothing }}
-<header class="main-header tag-head {{#if tag.image}}" style="background-image: url({{tag.image}}){{else}}{{#if @blog.cover}}" style="background-image: url({{@blog.cover}}){{else}}no-cover{{/if}}{{/if}}">
-    <nav class="main-nav overlay clearfix">
-        {{#if @blog.logo}}<a class="blog-logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="{{@blog.title}}" /></a>{{/if}}
-        {{#if @blog.navigation}}
-            <a class="menu-button icon-menu" href="#"><span class="word">Menu</span></a>
-        {{/if}}
-    </nav>
-    <div class="vertical">
-        <div class="main-header-content inner">
-            <h1 class="page-title">{{tag.name}}</h1>
-            <h2 class="page-description">
-                {{#if tag.description}}
-                    {{tag.description}}
-                {{else}}
-                    A {{pagination.total}}-post collection
-                {{/if}}
-            </h2>
+<div class="tag_partial">
+    <main class="mdl-layout__content">
+
+        <div class="navigation_partial">
+            <div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer
+                    mdl-layout--overlay-drawer-button">
+                {{> "navigation"}}
+            </div>
         </div>
-    </div>
-</header>
 
-{{! The main content area on the homepage }}
-<main class="content" role="main">
+        <div class="page-content">
+        
+            <div class="splash_partial">
+                {{> "splash"}}
+            </div>
 
-    {{! The tag below includes the post loop - partials/loop.hbs }}
-    {{> "loop"}}
-
-</main>
+            <h1 class="page-title">{{tag.name}}</h1>
+        
+            <div class="post-loop_partial">
+                {{> "loop"}}
+            </div>
+        </div>
+    </main>
+</div>
